--- a/app/src/main/res/layout/fragment_groups_item.xml
+++ b/app/src/main/res/layout/fragment_groups_item.xml
@@ -18,15 +18,13 @@
             android:id="@+id/fragment_groups_item_groupName"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
-            android:text="Group Name" />
+            android:layout_weight="3" />
 
         <TextView
             android:id="@+id/fragment_groups_item_createdBy"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
-            android:text="Created By" />
+            android:layout_weight="3" />
     </LinearLayout>
 
     <ImageButton
@@ -35,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:visibility="gone"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/ic_add" />
 
     <ImageButton
         android:id="@+id/fragment_groups_item_deleteButton"
@@ -43,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:visibility="gone"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        app:srcCompat="@drawable/ic_delete" />
 
     <ImageButton
         android:id="@+id/fragment_groups_item_leaveButton"
@@ -51,6 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:visibility="gone"
-        app:srcCompat="@drawable/ic_leave_group" />
+        app:srcCompat="@drawable/ic_remove" />
 
 </LinearLayout>
