--- a/app/src/main/res/layout/fragment_contacts_item.xml
+++ b/app/src/main/res/layout/fragment_contacts_item.xml
@@ -1,32 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fragment_contacts_item_LinearLayout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_contacts_item_constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="95dp"
+    android:layout_height="90dp"
     android:orientation="horizontal"
     android:padding="10dp">
 
     <ImageView
         android:id="@+id/fragment_contacts_item_userImage"
-        android:layout_width="0dp"
+        android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_weight="2"
         android:contentDescription="User Profile Image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
-
-    <TextView
-        android:id="@+id/fragment_contacts_item_userName"
-        android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:layout_weight="5"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="10dp" />
 
     <ImageView
         android:id="@+id/fragment_contacts_item_isOnlineButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fragment_contacts_item_userName"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/presence_online" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/fragment_contacts_item_userName"
+        android:layout_width="250dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="16dp"
+        android:layout_weight="5"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fragment_contacts_item_userImage"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
