--- a/app/src/main/res/layout/fragment_contacts_item.xml
+++ b/app/src/main/res/layout/fragment_contacts_item.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_contacts_item_constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp">
 
     <ImageView
         android:id="@+id/fragment_contacts_item_userImage"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_weight="2"
-        android:contentDescription="User Profile Image"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/profileImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
@@ -23,23 +21,24 @@
         android:id="@+id/fragment_contacts_item_isOnlineButton"
         android:layout_width="12dp"
         android:layout_height="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/onlineIcon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragment_contacts_item_userName"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/presence_online" />
 
     <TextView
         android:id="@+id/fragment_contacts_item_userName"
-        android:layout_width="250dp"
-        android:layout_height="75dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="5"
         android:gravity="start|center_vertical"
-        android:paddingLeft="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_contacts_item_isOnlineButton"
         app:layout_constraintStart_toEndOf="@+id/fragment_contacts_item_userImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/fragment_contacts_item_userImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
